# kubectl-fluidos-plugin

./: .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  Pipfile  README.md  go.mod  go.sum  kubectl_fluidos.py  main.go  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
kubectl_fluidos/: __init__.py  common.py  modelbased.py  mspl.py
src/kubectl_fluidos/: __init__.py  common.py  modelbased.py  mspl.py
tests/: test_kubectl_fluidos.py  test_model_based.py  test_mspl.py  test_umu_api.py
tests/dataset/: test-deployment-single-w-intent.yaml  test-deployment-single.yaml  test-mspl.xml
