# coding: utf-8
# ------------------------------------------------------------------------------
# Copyright 2023 IBM Research Europe
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#  http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[metadata]
name = kubectl-fluidos
version = 0.1.0

author = 'Stefano Braghin, Liubov Nedoshivina'
author_email = 'stefanob@ie.ibm.com, liubov.nedoshivina@ibm.com'
license = "Apache 2.0"

[options]
py_modules = kubectl_fluidos
python_requires = >=3.10
install_requires = 
    PyYAML==6.0.1
    kubernetes==29.0.0
    requests==2.31.0
install_data_files = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
kubectl_fluidos = logging.conf

[options.entry_points]
console_scripts =
    kubectl-fluidos = kubectl_fluidos:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disable_error_code = import-untyped

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = E265,E501,W504

[bandit]
ignore = B101
